@@ -1,3 +1,8 @@
+2009-10-12  Antonello Provenzano  <antonello@deveel.com>
+	* SelectableScheme.cs: removed methods WriteTo and ReadFrom 
+	(present in the old version of McKoi), to prepare the
+	introduction of new indices.
+	
 2009-10-09  Antonello Provenzano  <antonello@deveel.com>
 	* TableDataConglomerate.cs: global renaming for code clarity
 		- SYS_INFO -> SYSTEM
